--- a/code/TX_dw_merging.Rmd
+++ b/code/TX_dw_merging.Rmd
@@ -240,7 +240,10 @@ all_intakes_basin_fixed <- rbind(all_intakes_basin_fixed, falcon)
 
 # final tidying of dataset: 
 all_sw_intakes_final <- all_intakes_basin_fixed %>%
-  unique() 
+  unique() %>%
+  mutate(alt_res_name = 
+           case_when(alt_res_name == "NA" ~ res_name, 
+                     TRUE ~ alt_res_name))
 
 # saving: 
 st_write(all_sw_intakes_final, "./data/clean/pwsid_swaterbodies.geojson")
@@ -276,16 +279,16 @@ leaflet() %>%
               weight = 1,
               label = paste0("reservoir: ", res_basin$res_name, "; basin: ",
                              res_basin$basin_name_short)) %>%
-  addCircleMarkers(data = all_sw_intakes_final, 
+  addCircleMarkers(data = all_sw_intakes, 
                    fill = ~wtrbdy_pal(basin_name_short), 
                    color = ~wtrbdy_pal(basin_name_short), 
                    weight = 3, 
                    opacity = 9, 
                    radius = 3, 
-                   label = paste0("pwsid: ", all_sw_intakes_final$pwsid, "; waterbody: ", 
-                                  all_sw_intakes_final$res_name, 
+                   label = paste0("pwsid: ", all_sw_intakes$pwsid, "; waterbody: ", 
+                                  all_sw_intakes$res_name, 
                                   "; basin name: ", 
-                                  all_sw_intakes_final$basin_name_short)) %>%
+                                  all_sw_intakes$basin_name_short)) %>%
   addPolylines(data = riv_basin,
                opacity = 9,
                color = ~wtrbdy_pal(basin_name_short),
@@ -452,35 +455,50 @@ leaflet() %>%
                                   well_final$aquifer_five))
 ```
 
-## Merging: demographics
-
-## Merging: finacial 
-
-## Merging: water delivery system
+## Merging: demographics, financial, water delivery system: 
 ```{r}
-head(demo)
-head(fin)
-head(wds)
+names(demo)
+names(fin)
+names(wds)
+# everything here is clean & easy to merge with either census geographies, 
+# counties, or pwsids. 
 ```
 
 ## Merging keys: 
 ```{r}
+sw_intakes <- aws.s3::s3read_using(st_read, 
+                            object = "s3://tech-team-data/state-drinking-water/TX/clean/pwsid_swaterbodies.geojson")
+
 # pwsid, waterbody name, and basin name: 
-pwsid_sw_merge <- all_sw_intakes_final %>%
+pwsid_sw_merge <- sw_intakes %>%
   as.data.frame() %>%
   select(pwsid, sys_name, basin_name_short, res_name, alt_res_name) %>%
   unique() %>%
   # filtering NAs, from when a waterbody exists but does not supply water 
   # to a public water system: 
   filter(!is.na(pwsid))
-# 350 pwsids
+# 355 pwsids
 
+gw_wells <- aws.s3::s3read_using(st_read, 
+                            object = "s3://tech-team-data/state-drinking-water/TX/clean/well_county_aquifers.geojson")
 # well number, county, and aquifers: 
-well_gw_merge <- well_final %>%
+well_gw_merge <- gw_wells %>%
   as.data.frame() %>%
   select(state_well_n, county_name, aquifer_one:aquifer_five) %>%
   unique()
 # 12997 wells
+
+TX_merging_keys <- list()
+TX_merging_keys[[1]] <- pwsid_sw_merge
+TX_merging_keys[[2]] <- well_gw_merge
+
+names(TX_merging_keys) <- c("pwsid_sw", "well_gw_county")
+saveRDS(TX_merging_keys, file="./data/clean/TX_merging_keys_list.RData")
+put_object(
+  file = "./data/clean/TX_merging_keys_list.RData",
+  object = "/state-drinking-water/TX/clean/TX_merging_keys_list.RData",
+  bucket = "tech-team-data",
+)
 ```
 
 
